--- a/flask_app/static/css/main.css
+++ b/flask_app/static/css/main.css
@@ -54,14 +54,14 @@ div.about {
 h2 {
   font-size: 3em;
   margin-top: 40px;
-  text-align: center;
+  text-align: left;
   letter-spacing: -2px;
 }
 h3 {
   font-size: 1.7em;
   font-weight: 100;
   margin-top: 30px;
-  text-align: center;
+  text-align: left;
   letter-spacing: -1px;
   color: #999;
 }
@@ -80,7 +80,6 @@ h3 {
   text-decoration: none;
 }
 textarea {
-            width: 100%;
             height: 200px;
             padding: 12px 20px;
             box-sizing: border-box;
@@ -89,4 +88,5 @@ textarea {
             background-color: #f8f8f8;
             font-size: 16px;
             resize: none;
+            width: 50%;
         }
