--- a/flask_app/templates/results.html
+++ b/flask_app/templates/results.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<h2>Squad Results</h2>
+<h4><i>Results</i></h4>
 <ul>
 {% for file_url in file_urls %}
      {% for packaged_prediction in predict(file_url) %}
